# FinBot

./: .gitignore  .pre-commit-config.yaml  Dockerfile  PortfolioOpt.py  README.md  config.py  config_sample.py  flask_app.py  main.py  pyproject.toml  requirements.txt
src/: app.py  cipher.py  config.py  constants.py  db.py  models.py  scheduler.py  utils.py  watchlist.py
src/commands/: chart.py  help.py  monte_carlo.py  news.py  portfolio_opt.py  quote.py  stats.py  watchlist.py
src/schedules/: earnings.py  swings.py
