[project]
name = "FinBot"
dynamic = ["version"]
readme = "README.md"
requires-python = ">=3.12, <3.13"
authors = [
    {name = "Scott Caratozzolo", email = "scaratozzolo12@gmail.com"},
]
dependencies = [
    "apscheduler>=3.11.0",
    "emoji>=2.14.1",
    "fastapi>=0.115.8",
    "finnhub-python>=2.4.22",
    "groupyapi",
    "gunicorn>=23.0.0",
    "loguru>=0.7.3",
    "matplotlib>=3.10.0",
    "mplfinance>=0.12.10b0",
    "numpy>=2.2.3",
    "pandas>=2.2.3",
    "pydantic-settings>=2.8.0",
    "pymongo>=4.11.1",
    "scipy>=1.15.2",
    "uvicorn>=0.34.0",
    "yfinance>=0.2.54",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = [
    "F",
    "E",
    "W",
    "I",
    "N",
    "A",
    "C4",
    "DTZ002", "DTZ003",
    "G010",
    "T20",
    "ERA",
    "PL",
]

ignore = [
    "E501",
]

[tool.uv.sources]
groupyapi = { git = "https://github.com/TheKrafter/Groupy" }

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pre-commit>=4.1.0",
    "ruff>=0.9.7",
]
